# cellwriter

./: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  README  README.md  TODO  cellwriter.1  cellwriter.desktop  config.h  config.h.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
debian/: cellwriter.substvars  changelog  control  copyright  files  menu  rules  watch
share/cellwriter/: profile  wordfreq
share/pixmaps/: cellwriter.xpm
src/: averages.c  cellwidget.c  common.h  keyevent.c  keys.h  keywidget.c  main.c  options.c  preprocess.c  recognize.c  recognize.h  singleinstance.c  statusicon.c  stroke.c  window.c  wordfreq.c
src/libegg/: eggtrayicon.c  eggtrayicon.h
test/: Makefile  test  test.c
